<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cesit"
    tools:context=".SecimActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="306dp"
        android:layout_height="67dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/button_back"
        android:text="@string/americano"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView2" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="69dp"
        android:layout_height="69dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/image_back"
        android:src="@drawable/americano"
        app:layout_constraintBottom_toTopOf="@+id/imageView3"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="306dp"
        android:layout_height="67dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/button_back"
        android:text="@string/latte"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="306dp"
        android:layout_height="67dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/button_back"
        android:text="@string/Mocha"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView4" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="306dp"
        android:layout_height="67dp"
        android:layout_marginBottom="83dp"
        android:background="@drawable/button_back"
        android:text="@string/misto"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/KahveSec"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView5" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="69dp"
        android:layout_height="69dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/image_back"
        android:src="@drawable/cappucino"
        app:layout_constraintBottom_toTopOf="@+id/imageView4"
        app:layout_constraintEnd_toStartOf="@+id/textView6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="69dp"
        android:layout_height="69dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/image_back"
        android:src="@drawable/macchiato"
        app:layout_constraintBottom_toTopOf="@+id/imageView5"
        app:layout_constraintEnd_toStartOf="@+id/textView7"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="69dp"
        android:layout_height="69dp"
        android:layout_marginBottom="83dp"
        android:background="@drawable/image_back"
        android:src="@drawable/latte"
        app:layout_constraintBottom_toTopOf="@+id/KahveSec"
        app:layout_constraintEnd_toStartOf="@+id/textView8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/KahveSec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="90dp"
        android:ems="10"
        android:hint="@string/kahve_se_iminizi_giriniz"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Siparis"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Siparis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="90dp"
        android:background="@drawable/button_back"
        android:backgroundTint="#C4F47500"
        android:text="@string/sipari_ver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/KahveSec" />
</androidx.constraintlayout.widget.ConstraintLayout>